--- a/src/Section_Nav/UserLinks.css
+++ b/src/Section_Nav/UserLinks.css
@@ -1,3 +1,17 @@
+.nav-bar-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2%;
+    border: 1px solid black;
+}
+
+.nav-bar-wrapper a:hover {
+    text-shadow: 0 0 5px grey;
+    box-shadow: none;
+}
+
 .links-wrapper {
     display: flex;
     flex-direction: row;
