Added password confirmation to signup and rough summary page

--- a/src/Section_Main/SummaryPage.css
+++ b/src/Section_Main/SummaryPage.css
@@ -1,3 +1,11 @@
 .summary-wrapper {
     text-align: center;
 }
+
+.summary-wrapper h2, p {
+    margin: 20px;
+}
+
+.summary-wrapper p {
+    font-size: 20px;
+}
