--- a/src/Section_Forms/LoginForm.css
+++ b/src/Section_Forms/LoginForm.css
@@ -1,4 +1,12 @@
 .login-form-wrapper {
+    margin: 20px 40px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 6px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.login-form-fields-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,8 +20,11 @@
     margin: 5px;
 }
 
-.date-picker-container {
-    margin: 10px;
+.inputs-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px;
 }
 
 .error-message {
