--- a/src/Section_Forms/SignupPage.css
+++ b/src/Section_Forms/SignupPage.css
@@ -1,15 +1,29 @@
 .signup-form-wrapper {
+    margin: 20px 40px;
+    padding: 20px;
+    border: 1px solid black;
+    border-radius: 6px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.signup-form-fields-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px;
 }
 
 .signup-form-section {
     margin: 5px;
 }
 
+.password-guidance {
+    margin: 15px 5px;
+}
+
 .password-guidance p {
     text-align: center;
+    margin: 4px;
 }
 
 .error-message {
