--- a/src/Section_Main/HikeDetail.css
+++ b/src/Section_Main/HikeDetail.css
@@ -8,6 +8,8 @@
     margin: 10px;
     padding: 10px 30px;
     border: 1px solid black;
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.7);
 }
 
 .hike-details-section a:hover {
