--- a/src/Section_Main/LandingPage.css
+++ b/src/Section_Main/LandingPage.css
@@ -1,7 +1,9 @@
 .landing-info-block {
-    margin: 10px;
+    margin: 20px 40px;
     padding: 20px;
     border: 1px solid black;
+    border-radius: 6px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 h2 {
