--- a/src/App.css
+++ b/src/App.css
@@ -60,9 +60,9 @@ input, textarea, option {
 
 .nav-bar-wrapper {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding: 0px 3%;
 }
 
@@ -71,13 +71,25 @@ input, textarea, option {
   box-shadow: none;
 }
 
+.active {
+  text-shadow: 0 0 7px rgb(78, 78, 78);
+  box-shadow: none;
+}
+
+.links-wrapper-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .links-wrapper {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 .individual-link {
-  margin: 0 15px 15px 0px;
+  margin: 0 8px 5px 8px;
   font-size: 18px;
 }
 
@@ -86,8 +98,34 @@ input, textarea, option {
   cursor: pointer;
 }
 
+/*--- Medium-sized viewport adjustments ---*/
+
+@media all and (min-width: 320px) {
+
+  .links-wrapper-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .individual-link {
+    margin: 0 8px 10px 8px;
+    font-size: 18px;
+  }
+
+}
 
 
+/*--- Desktop adjustments ---*/
 
+@media all and (min-width: 650px) {
+
+  .nav-bar-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+}
 
 
