--- a/src/Section_Main/HikeCard.css
+++ b/src/Section_Main/HikeCard.css
@@ -1,9 +1,8 @@
 .hike-card {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     margin: 10px;
     padding: 5px;
     border: 1px solid black;
@@ -13,19 +12,91 @@
 }
 
 .card-title {
-    text-align: left;
-    width: 200px;
-    padding-left: 10px;
+    justify-content: center;
+}
+
+.card-title h3 {
+    margin: 5px 0;
+}
+
+.hike-card-sub-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 90%;
 }
 
 .card-element {
+    height: 18pt;
+    line-height: 18pt;
+    margin: 3px;
+    padding: 5px;
     border: 1px solid grey;
     border-radius: 4px;
-    margin: 10px;
-    padding: 5px;
     background-color: rgba(255, 255, 255, 0.6);
+}
+
+/*--- individual element flex ratios ---*/
+.card-date {
+    flex: 1 1 0;
+}
+.card-time {
+    flex: 1 1 0;
+}
+.card-distance {
+    flex: 1 1 0;
+}
+.card-elevation {
+    flex: 5 0 0;
+}
+.card-rating {
+    flex: 2 0 0;
 }
 
 .hike-card-buttons {
     margin-bottom: 10px;
+}
+
+/*--- Medium-sized viewport adjustments ---*/
+
+@media all and (min-width: 400px) and (max-width: 849px) {
+
+    .hike-card-sub-section {
+        width: 70%
+    }
+}
+
+/*--- Medium-plus-sized viewport adjustments ---*/
+
+@media all and (min-width: 500px) and (max-width: 849px) {
+
+    .hike-card {
+        margin: 10px 15%;
+    }
+}
+
+
+/*--- Desktop adjustments ---*/
+
+@media all and (min-width: 850px) {
+
+    .hike-card {
+        flex-direction: row;
+    }
+
+    .card-title {
+        flex: 4 0 0;
+        justify-content: left;
+        text-align: left;
+        padding-left: 10px;
+    }
+    .card-date-container {
+        flex: 3 0 0;
+    }
+    .card-dist-time-container {
+        flex: 4 0 0;
+    }
+    .card-elev-rate-container {
+        flex: 3 0 0;
+    }
 }
