--- a/src/Section_Main/SummaryPage.css
+++ b/src/Section_Main/SummaryPage.css
@@ -1,6 +1,6 @@
 .summary-wrapper {
     text-align: center;
-    margin: 60px;
+    margin: 10px;
     padding: 20px;
     border: 1px solid black;
     border-radius: 6px;
@@ -8,10 +8,30 @@
 }
 
 .summary-wrapper h2 {
-    margin: 20px 0 40px 0;
+    margin: 10px 0 20px 0;
 }
 
 .summary-wrapper p {
     margin: 20px;
     font-size: 20px;
+}
+
+.summary-return-link p {
+    font-size: 12pt;
+    margin: 40px 0 10px 0;
+}
+
+
+
+
+/*--- Desktop adjustments ---*/
+
+@media all and (min-width: 650px) {
+    .summary-wrapper {
+        margin: 60px;
+    }
+
+    .summary-wrapper h2 {
+        margin: 20px 0 40px 0;
+    }    
 }
