--- a/src/App.css
+++ b/src/App.css
@@ -48,8 +48,23 @@ h2 {
 
 input, textarea, option {
   background-color: rgba(255, 255, 255, 0.6);;
-  border: 1px solid #473F2A;
+  border: 1px solid rgb(65, 65, 65);
   border-radius: 4px;
+}
+
+.hike-tracker-button {
+  background-color: rgba(255, 255, 255, 0.6);;
+  border: 1px solid rgb(65, 65, 65);
+  border-radius: 4px;
+  margin: 5px;
+  padding: 8px 16px;
+  font-size: 12pt;
+}
+
+.hike-tracker-button:hover {
+  box-shadow: 0 0 5px grey;
+  text-shadow: none;
+  cursor: pointer;
 }
 
 /*-- Nav Bar --*/
@@ -67,7 +82,7 @@ input, textarea, option {
 }
 
 .nav-bar-wrapper a:hover {
-  text-shadow: 0 0 5px grey;
+  text-shadow: 0 0 7px rgb(78, 78, 78);
   box-shadow: none;
 }
 
@@ -86,6 +101,8 @@ input, textarea, option {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .individual-link {
