--- a/src/Section_Forms/LoginForm.css
+++ b/src/Section_Forms/LoginForm.css
@@ -1,9 +1,13 @@
 .login-form-wrapper {
-    margin: 20px 40px;
+    margin: 10px;
     padding: 20px;
     border: 1px solid black;
     border-radius: 6px;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+.login-form-wrapper h2 {
+    margin: 5px;
 }
 
 .login-form-fields-container {
@@ -12,11 +16,10 @@
     align-items: center;
 }
 
-.login-form-wrapper h2 {
-    margin: 10px 0px;
-}
-
 .login-form-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 5px;
 }
 
@@ -31,4 +34,21 @@
     margin: 15px;
     color: red;
     font-style: italic;
+}
+
+/*--- Desktop adjustments ---*/
+
+@media all and (min-width: 650px) {
+    .login-form-wrapper {
+        margin: 20px 80px;
+        padding: 20px;
+    }
+
+    .login-form-wrapper h2 {
+        margin: 20px;
+    }
+
+    .login-form-section {
+        display: inline;
+    }
 }
