--- a/src/Section_Forms/NewHike.css
+++ b/src/Section_Forms/NewHike.css
@@ -1,25 +1,37 @@
 .new-hike-form-wrapper {
-    margin: 20px 40px;
-    padding: 20px;
+    margin: 5px;
+    padding: 5px;
+}
+
+.new-hike-entry {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .new-hike-form-wrapper h2 {
-    margin: 0px 0px 20px 0px;
+    margin: 20px;
 }
 
 .hike-form-supersection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 10px;
     padding: 10px;
     border: 1px solid black;
     border-radius: 6px;
     background-color: rgba(255, 255, 255, 0.6);
     text-align: center;
-    line-height: 2;
 }
 
 .hike-form-supersection h3 {
     font-size: 24px;
-    margin: 10px 0px;
+    margin: 0;
+}
+
+.hike-form-section  {
+    margin: 7px;
 }
 
 .date-picker-container {
@@ -34,7 +46,31 @@
 .return-link {
     margin-top: 15px;
 }
+/*--- Medium-sized viewport adjustments ---*/
 
-.date-picker-container {
-    background-color: #e2d5b6;
+@media all and (min-width: 400px) and (max-width: 799px) {
+
+    .required-inputs, .optional-inputs {
+        width: 80%
+    }
+
+    .buttons-box {
+        width: 300px;
+    }
+}
+
+/*--- Desktop adjustments ---*/
+
+@media all and (min-width: 800px) {
+    .required-inputs, .optional-inputs {
+        width: 60%
+    }
+
+    .hike-form-supersection h3 {
+        margin: 15px;
+    }
+
+    .buttons-box {
+        width: 250px;
+    }
 }
