--- a/src/Section_Forms/SignupPage.css
+++ b/src/Section_Forms/SignupPage.css
@@ -1,19 +1,25 @@
 .signup-form-wrapper {
-    margin: 20px 40px;
-    padding: 20px;
+    margin: 10px;
+    padding: 10px;
     border: 1px solid black;
     border-radius: 6px;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+.signup-form-wrapper h2 {
+    margin: 5px;
 }
 
 .signup-form-fields-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
 }
 
 .signup-form-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 5px;
 }
 
@@ -30,4 +36,21 @@
     margin: 15px;
     color: red;
     font-style: italic;
+}
+
+/*--- Desktop adjustments ---*/
+
+@media all and (min-width: 800px) {
+    .signup-form-wrapper {
+        margin: 20px 40px;
+        padding: 20px;
+    }
+
+    .signup-form-wrapper h2 {
+        margin: 20px;
+    }
+
+    .signup-form-section {
+        display: inline;
+    }
 }
