--- a/src/Section_Main/LandingPage.css
+++ b/src/Section_Main/LandingPage.css
@@ -10,6 +10,9 @@
 }
 
 .landing-info-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 5px;
     padding: 15px;
     border: 1px solid black;
@@ -50,5 +53,9 @@ h2 {
 
     .links-block {
         width: 250px;
+    }
+
+    .data-options-list {
+        margin-right: 130px;
     }
 }
